// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`report helpers dedupeFilters returns deduped filters 1`] = `
Array [
  Object {
    "id": 698,
    "type": "Subaccount",
    "value": "created (ID 698)",
  },
  Object {
    "id": 656,
    "type": "Subaccount",
    "value": "test create no key (ID 656)",
  },
  Object {
    "id": 550,
    "type": "not-subaccount",
    "value": "some random value",
  },
]
`;

exports[`report helpers parseSearch Should parse search with no empty value 1`] = `
Object {
  "options": Object {},
}
`;

exports[`report helpers parseSearch should parse search with custom range 1`] = `
Object {
  "filters": Array [
    Object {
      "id": undefined,
      "type": "Domain",
      "value": "test.com",
    },
    Object {
      "id": "123",
      "type": "Subaccount",
      "value": "test",
    },
  ],
  "options": Object {
    "from": 2017-11-03T14:43:00.000Z,
    "metrics": Array [
      "count-something",
    ],
    "relativeRange": "custom",
    "to": 2017-11-04T14:43:00.000Z,
  },
}
`;

exports[`report helpers parseSearch should parse search with missing range 1`] = `
Object {
  "filters": Array [
    Object {
      "id": undefined,
      "type": "Domain",
      "value": "test.com",
    },
    Object {
      "id": "123",
      "type": "Subaccount",
      "value": "test",
    },
  ],
  "options": Object {
    "from": 2017-11-03T14:43:00.000Z,
    "metrics": Array [
      "count-something",
    ],
    "to": 2017-11-04T14:43:00.000Z,
  },
}
`;

exports[`report helpers parseSearch should parse search with relative range 1`] = `
Object {
  "filters": Array [
    Object {
      "id": undefined,
      "type": "Domain",
      "value": "test.com",
    },
    Object {
      "id": "123",
      "type": "Subaccount",
      "value": "test",
    },
  ],
  "options": Object {
    "from": "relative-from",
    "metrics": Array [
      "count-something",
    ],
    "relativeRange": "relative-range",
    "to": "relative-to",
  },
}
`;
